$Id: NEWS,v 1.933 2008-08-28 00:05:57 castaglia Exp $

-----------------------------------------------------------------------------
  More details on the bugs listed below can be found by using the bug number
  indicated in the following URL:

    http://bugs.proftpd.org/show_bug.cgi?id=N

  where `N' is the bug number.
-----------------------------------------------------------------------------

CVS
--------------------------------
- Added Chinese translation
- Bug 3073 - Command arguments not decoded properly in some places.
- Bug 3076 - RPM build failing on 64 bit OS due to incomplete .spec.
- Bug 3082 - Use "DEFAULT" keyword instead of "ALL" for Trace directive.
  Hopefully the "DEFAULT" keyword will be more accurate, more descriptive
  of the actual functionality triggered by the keyword.
- Bug 3083 - Multiple issues with handling of <Class> definitions.
- Bug 3077 - Transparently handle the X-variant commands when checking
  <Limit> permissions.
- Bug 3036 - Quota information not persisted if session ends abruptly.
- Bug 3094 - Perform unidirectional SSL/TLS shutdown on data connections.
- Bug 3096 - libcap version errors on newer Linux kernel.
- Bug 3074 - Support configure option for pkgconfig .pc file install
  location.
- Bug 3095 - TLSPassphraseProvider port number truncated.
- Bug 3099 - Add trace logging of filesystem permission errors.  To see
  this additional logging, use Trace logging, and configure it to log
  the "fileperms" log channel.
- Bug 3100 - Support ftpmail options for sending emails only for specific
  users.  See doc/contrib/ftpmail.html for more details.
- Bug 3030 - GroupOwner should work for all groups.  Previously, GroupOwner
  (without using UserOwner) could fail, if the user did not belong to
  the specified group.  Now proftpd will automatically detect, when
  handling GroupOwner, when root privileges need to be used for the
  configured group.
- Bug 3101 - mod_wrap2 does not compile on FreeBSD with custom includes.