@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.933 2008-08-28 00:05:57 castaglia Exp $
+$Id: NEWS,v 1.934 2008-08-30 00:04:40 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -51,6 +51,7 @@ CVS
 - Bug 2991 - Need a `prxs' (ProFTPD Extensions) command-line tool for building
   shared modules without proftpd source.
 - Bug 3106 - Add support for Mac OSX 10.5 sendfile.
+- Bug 3107 - TLSProtocol supports misleading "SSLv23" parameter.
 
 1.3.2rc1 - Released 15-Apr-2008
 --------------------------------
